# ai-context

./: .gitignore  AGENTS.md  Makefile  README.md  copilot-instructions-snipper.md  copilot-instructions-snippet.md  pyproject.toml
.github/workflows/: catalog-validation.yml
catalog/: catalog.yaml
catalog/components/hooks/: maintainability-hooks.yaml
catalog/profiles/: maintainable-development.yaml
catalog/schema/: catalog.cue  catalog.schema.json  component.schema.json  profile.schema.json
cue.mod/: module.cue
hooks/: maintainability-hooks.json
hooks/scripts/: maintainability_subagent_context.py
scripts/: generate_schemas.py  validate_catalog.py
scripts/catalog_validation/: __init__.py  catalog.py  cue_schema.py  git_snapshot.py  loading.py  model.py  paths.py  relations.py  versioning.py
skills/maintainable-code/: SKILL.md
specs/: 00-context-marketplace-roadmap.md  01-ai-context-catalog-spec.md  02-flightlog-marketplace-backend-spec.md  02-flightplan-marketplace-backend-spec.md  02a-flightplan-marketplace-foundation-spec.md  02b-flightplan-marketplace-projection-spec.md  02c-flightplan-marketplace-lifecycle-spec.md  02d-flightplan-marketplace-api-spec.md  03-flightlog-marketplace-ui-spec.md  03-flightplan-marketplace-ui-spec.md  03a-flightplan-marketplace-browser-spec.md  03b-flightplan-marketplace-actions-spec.md  03c-flightplan-marketplace-resilience-spec.md  03d-flightplan-marketplace-ui-quality-spec.md  HANDOFF.md
tests/: catalog_test_support.py  test_catalog_schema.py  test_catalog_semantics.py  test_catalog_versioning.py  test_cue_schema.py
(+4 files in other folders)
