[project]
name = "ai-context"
version = "0.0.0"
description = "Validation tooling for the AI Context catalog."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema==4.23.0",
  "packaging==24.2",
  "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
  "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["hooks", "skills"]

[tool.ruff.lint]
select = [
  "B",
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "SIM",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
